--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "description": "Cypress V8 coverage chrome plugin ",
   "files": [
-    "src/*.js"
+    "src/**/*.js"
   ],
   "author": "Gregoire Peltier",
   "keywords": [],
