--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "author": "Gregoire Peltier",
   "keywords": [],
-  "devDependencies": {
+  "dependencies": {
     "chrome-remote-interface": "0.31.0",
     "istanbul-lib-coverage": "3.0.0",
     "mkdirp": "0.5.1",
